@@ -40,7 +40,9 @@ Release 1.4.1 (2011-01-28)
   will be available in release 1.4.2.
 - fixed SF# 3165918: Poco::DynamicAny fails to convert from string to float
 - fixed SF# 3165910: Poco::Net::MessageHeader does not accept HTTP conforming header
-
+- made Poco::Task::cancel() virtual so that tasks can implement custom
+  cancellation behavior.
+  
 
 Release 1.4.0 (2010-12-14)
 ==========================
@@ -1447,4 +1449,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.4/dist/CHANGELOG#7 $
+$Id: //poco/1.4/dist/CHANGELOG#8 $
